--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Greet Everyone
+name: Tests
 
 # Trigger the workflow on push or pull request
 on: [push, pull_request]
@@ -20,4 +20,4 @@ jobs:
       - name: yarn test
         uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: test # will run `yarn test` command 
+          cmd: test --maxWorkers=50% # will run `yarn test` command 
