--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "interactive-cv",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -27,5 +22,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  
+  "dependencies": {
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.2.0"
+  },
+  "devDependencies": {
+    "standard": "^14.3.1"
   }
 }
