--- a/.github/workflows/DeployToGithubPages.yml
+++ b/.github/workflows/DeployToGithubPages.yml
@@ -7,5 +7,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: maxheld83/ghpages@v0.2.1
+
+      - name: Yarn init
+        uses: Borales/actions-yarn@v2.0.1
+        with:
+          cmd: install # will run `yarn install` command
+
+      - name: Yarn build
+        uses: Borales/actions-yarn@v2.0.1
+        with:
+          cmd: build
+
+      - name: Deploy
+        uses: maxheld83/ghpages@v0.2.1
+        env: 
+          BUILD_DIR: build/
+        secrets: [GH_Pages_Deploy]
       
