--- a/.github/workflows/DeployToGithubPages.yml
+++ b/.github/workflows/DeployToGithubPages.yml
@@ -22,5 +22,5 @@ jobs:
         uses: maxheld83/ghpages@v0.2.1
         env: 
           BUILD_DIR: build/
-        secrets: [GH_Pages_Deploy]
+        #secrets: [GH_Pages_Deploy]
       
