--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
       "last 1 safari version"
     ]
   },
-  
   "dependencies": {
+    "i18next": "^18.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-i18next": "^11.0.0",
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
