--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "i18next": "^18.0.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -32,5 +33,6 @@
   },
   "devDependencies": {
     "standard": "^14.3.1"
-  }
+  },
+  "homepage": "https://ovchingus.github.io/interactive-cv/"
 }
