--- a/.github/workflows/DeployToGithubPages.yml
+++ b/.github/workflows/DeployToGithubPages.yml
@@ -13,12 +13,7 @@ jobs:
         with:
           cmd: install # will run `yarn install` command
 
-      - name: Yarn build
-        uses: Borales/actions-yarn@v2.0.1
-        with:
-          cmd: build
-      
-      - name: Deploy
+      - name: Build && Deploy
         uses: Borales/actions-yarn@v2.0.1
         with: 
           cmd: deploy
