--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "i18next": "^18.0.1",
+    "i18next-browser-languagedetector": "^4.0.0",
+    "i18next-xhr-backend": "^3.2.0",
     "mobile-detect": "^1.4.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
